Botao validar(trocar imagem), botao cadastrar(criar objeto)

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="dados">
             <div>
             <label for="">Nome:</label>
-            <input id="nome" type="text">
+            <input id="usuario" type="text">
             <br>
             <label for="">Email:</label>
             <input id="email" type="text">
-            <button onclick="cadastro()">Confirmar</button>
+            <button onclick="cadastrar()">Confirmar</button>
             </div>
             <div id="box1">
                 <div><p>Vitórias: <span id="contador">0</span></p></div>
@@ -36,7 +36,7 @@
             <div>
                 <label for="">Digite uma Letra:</label>
                 <input id="nome" type="text">
-                <button onclick="Validar()">Confirmar</button>
+                <button onclick="Validar()">Arriscar</button>
             </div>    
         </div>  
         <div class="corpo">
