--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </header>
 
     <main>
-        <p>dhsjdhsajdhas</p>
 
-        <p>sajshjashjasdhjsdhjsadh</p>
+        <img src="Imagens/01.png" alt="" id="trocarimg">
+
     </main>
 
     <span>
