--- a/teste.html
+++ b/teste.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <body>
+        <img id="teste" src="Imagens/01.png" width="160" height="120" onLoad="trocaImg();">
+        </body>
 
     <script src="forca.js"></script>
     
