Quantidade de vitoria e derrota

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
 
 
     <div class="Vitoria">
-        <p>Vitória:</p>
-        <p>Derrota:</p>
+        <label>Vitória:</label> 
+        <input type = "text" id="vitoria"></input>
+        <br>
+        <br>
+        <label>Derrota:</label> <input type="text" id="derrota"></input>
     </div>
 
     
@@ -49,7 +52,7 @@
             <br>
             <br>
             <label>Palavra secreta: </label>
-            <input type="text" id=""></input>
+            <input type="text" id="palavraSecreta"></input>
         </div>
         
 
