--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             <button onclick="cadastrar()">Confirmar</button>
             </div>
             <div id="box1">
-                <div><p>Vitórias: <span id="contador">0</span></p></div>
+                <div>
+                    <p>Vitórias: <span id="contadorV">0</span></p>
+                    <p>Derrotas: <span id="contadorD">0</span></p>
+                </div>
             </div>
         </div>
 
