Boneco dentro da caixa main

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </header>
 
     <main>
-
+        <div>
         <img src="Imagens/01.png" alt="" id="trocarimg">
-
+        </div>
     </main>
 
     <span>
