Front e CSS att

--- a/index.html
+++ b/index.html
@@ -18,25 +18,19 @@
             <label for="">Email:</label>
             <input id="email" type="text">
             <button onclick="cadastrar()">Confirmar</button>
-
     </div>
 
 
     <div class="Vitoria">
-        <label>Vitória:</label> 
-        <input type = "text" id="vitoria"></input>
-        <br>
-        <br>
-        <label>Derrota:</label> <input type="text" id="derrota"></input>
-    </div>
-
-    
+        <p>Vitorias: <span>0</span></p>
+        <p>Derrotas: <span>0</span></p>
+    </div>  
 
     </header>
 
     <main>
         <div>
-        <img src="Imagens/01.png" alt="" id="trocarimg">
+        <img src="Imagens/00.png" alt="" id="trocarimg">
         </div>
     </main>
 
@@ -48,9 +42,7 @@
 
         <div class="categoria">
             <label>Dica: </label>
-            <input type="text" id="categoria"></input>
-            <br>
-            <br>
+            <input type="text" id="categoria"></input>           
             <label>Palavra secreta: </label>
             <input type="text" id="palavraSecreta"></input>
         </div>
@@ -59,8 +51,8 @@
         <div class="palavra">
             <label for=""> Errado:</label>
             <input id="errado"></input>
-
-
+            <button style=";" onclick="reset()">Jogar Novamente</button>
+            
         </div>
     </span>
 
