Ja nao sei mais

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main>
         <div>
-        <img src="Imagens/00.png" alt="" id="trocarimg">
+        <img style="visibility: hidden;" src="Imagens/01.png" alt="" id="trocarimg">
         </div>
     </main>
 
