--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
     <div class="Vitoria">
-        <p>Vitorias: <span>0</span></p>
-        <p>Derrotas: <span>0</span></p>
+        <p>Vitorias: <span id="vitoria">0</span></p>
+        <p>Derrotas: <span id="derrota">0</span></p>
     </div>  
 
     </header>
@@ -51,44 +51,44 @@
         <div class="palavra">
             <label for=""> Errado:</label>
             <input id="errado"></input>
-            <button style=";" onclick="reset()">Jogar Novamente</button>
+            <button onclick="reset()">Jogar Novamente</button>
             
         </div>
     </span>
 
     <footer>
         <p>
-        <button value="Q" onclick="letra01('Q')">Q</button>
-        <button value="W" onclick="letra01('W')">W</button>
-        <button value="E" onclick="letra01('E')">E</button>
-        <button value="R" onclick="letra01('R')">R</button>
-        <button  value="T" onclick="letra01('T')">T</button>
-        <button  value="Y" onclick="letra01('Y')">Y</button>
-        <button value="U" onclick="letra01('U')">U</button>
-        <button value="I" onclick="letra01('I')">I</button>
-        <button value="O" onclick="letra01('O')">O</button>
-        <button value="P" onclick="letra01('P')">P</button>
-    </p>
-    <p><button value="A" onclick="letra01('A')">A</button>
-        <button value="S" onclick="letra01('S')">S</button>
-        <button value="D" onclick="letra01('D')">D</button>
-        <button value="F" onclick="letra01('F')">F</button>
-        <button value="G" onclick="letra01('G')">G</button>
-        <button value="H" onclick="letra01('H')">H</button>
-        <button value="J" onclick="letra01('J')">J</button>
-        <button value="K" onclick="letra01('K')">K</button>
-        <button value="L" onclick="letra01('L')">L</button>
-        <button value="Ç" onclick="letra01('Ç')">Ç</button>
-    </p>
-    <p>
-        <button value="Z" onclick="letra01('Z')">Z</button>
-        <button value="X" onclick="letra01('X')">X</button>
-        <button value="C" onclick="letra01('C')">C</button>
-        <button value="V" onclick="letra01('V')">V</button>
-        <button value="B" onclick="letra01('B')">B</button>
-        <button value="N" onclick="letra01('N')">N</button>
-        <button value="M" onclick="letra01('M')">M</button>
-    </p>
+            <button value="Q" onclick="letra01('Q')" id="btnQ">Q</button> 
+            <button value="W" onclick="letra01('W')" id="btnW">W</button>
+            <button value="E" onclick="letra01('E')" id="btnE">E</button>
+            <button value="R" onclick="letra01('R')" id="btnR">R</button>
+            <button value="T" onclick="letra01('T')" id="btnT">T</button>
+            <button value="Y" onclick="letra01('Y')" id="btnY">Y</button>
+            <button value="U" onclick="letra01('U')" id="btnU">U</button>
+            <button value="I" onclick="letra01('I')" id="btnI">I</button>
+            <button value="O" onclick="letra01('O')" id="btnO">O</button>
+            <button value="P" onclick="letra01('P')" id="btnP">P</button>
+        </p>
+        <p> <button value="A" onclick="letra01('A')" id="btnA">A</button>
+            <button value="S" onclick="letra01('S')" id="btnS">S</button>
+            <button value="D" onclick="letra01('D')" id="btnD">D</button>
+            <button value="F" onclick="letra01('F')" id="btnF">F</button>
+            <button value="G" onclick="letra01('G')" id="btnG">G</button>
+            <button value="H" onclick="letra01('H')" id="btnH">H</button>
+            <button value="J" onclick="letra01('J')" id="btnJ">J</button>
+            <button value="K" onclick="letra01('K')" id="btnK">K</button>
+            <button value="L" onclick="letra01('L')" id="btnL">L</button>
+            <button value="Ç" onclick="letra01('Ç')" id="btnÇ">Ç</button>
+        </p>
+        <p>
+            <button value="Z" onclick="letra01('Z')" id="btnZ">Z</button>
+            <button value="X" onclick="letra01('X')" id="btnX">X</button>
+            <button value="C" onclick="letra01('C')" id="btnC">C</button>
+            <button value="V" onclick="letra01('V')" id="btnV">V</button>
+            <button value="B" onclick="letra01('B')" id="btnB">B</button>
+            <button value="N" onclick="letra01('N')" id="btnN">N</button>
+            <button value="M" onclick="letra01('M')" id="btnM">M</button>
+        </p>
     </footer>
 
 
