--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="palavra">
             <label for=""> Errado:</label>
-            <input id="errado"></input>
+            <input id="letrasErradas"></input>
             <button onclick="reset()">Jogar Novamente</button>
             
         </div>
@@ -58,36 +58,36 @@
 
     <footer>
         <p>
-            <button value="Q" onclick="letra01('Q')" id="btnQ">Q</button> 
-            <button value="W" onclick="letra01('W')" id="btnW">W</button>
-            <button value="E" onclick="letra01('E')" id="btnE">E</button>
-            <button value="R" onclick="letra01('R')" id="btnR">R</button>
-            <button value="T" onclick="letra01('T')" id="btnT">T</button>
-            <button value="Y" onclick="letra01('Y')" id="btnY">Y</button>
-            <button value="U" onclick="letra01('U')" id="btnU">U</button>
-            <button value="I" onclick="letra01('I')" id="btnI">I</button>
-            <button value="O" onclick="letra01('O')" id="btnO">O</button>
-            <button value="P" onclick="letra01('P')" id="btnP">P</button>
+            <button value="Q" onclick="verificarLetra('Q')" id="btnQ">Q</button> 
+            <button value="W" onclick="verificarLetra('W')" id="btnW">W</button>
+            <button value="E" onclick="verificarLetra('E')" id="btnE">E</button>
+            <button value="R" onclick="verificarLetra('R')" id="btnR">R</button>
+            <button value="T" onclick="verificarLetra('T')" id="btnT">T</button>
+            <button value="Y" onclick="verificarLetra('Y')" id="btnY">Y</button>
+            <button value="U" onclick="verificarLetra('U')" id="btnU">U</button>
+            <button value="I" onclick="verificarLetra('I')" id="btnI">I</button>
+            <button value="O" onclick="verificarLetra('O')" id="btnO">O</button>
+            <button value="P" onclick="verificarLetra('P')" id="btnP">P</button>
         </p>
-        <p> <button value="A" onclick="letra01('A')" id="btnA">A</button>
-            <button value="S" onclick="letra01('S')" id="btnS">S</button>
-            <button value="D" onclick="letra01('D')" id="btnD">D</button>
-            <button value="F" onclick="letra01('F')" id="btnF">F</button>
-            <button value="G" onclick="letra01('G')" id="btnG">G</button>
-            <button value="H" onclick="letra01('H')" id="btnH">H</button>
-            <button value="J" onclick="letra01('J')" id="btnJ">J</button>
-            <button value="K" onclick="letra01('K')" id="btnK">K</button>
-            <button value="L" onclick="letra01('L')" id="btnL">L</button>
-            <button value="Ç" onclick="letra01('Ç')" id="btnÇ">Ç</button>
+        <p> <button value="A" onclick="verificarLetra('A')" id="btnA">A</button>
+            <button value="S" onclick="verificarLetra('S')" id="btnS">S</button>
+            <button value="D" onclick="verificarLetra('D')" id="btnD">D</button>
+            <button value="F" onclick="verificarLetra('F')" id="btnF">F</button>
+            <button value="G" onclick="verificarLetra('G')" id="btnG">G</button>
+            <button value="H" onclick="verificarLetra('H')" id="btnH">H</button>
+            <button value="J" onclick="verificarLetra('J')" id="btnJ">J</button>
+            <button value="K" onclick="verificarLetra('K')" id="btnK">K</button>
+            <button value="L" onclick="verificarLetra('L')" id="btnL">L</button>
+            <button value="Ç" onclick="verificarLetra('Ç')" id="btnÇ">Ç</button>
         </p>
         <p>
-            <button value="Z" onclick="letra01('Z')" id="btnZ">Z</button>
-            <button value="X" onclick="letra01('X')" id="btnX">X</button>
-            <button value="C" onclick="letra01('C')" id="btnC">C</button>
-            <button value="V" onclick="letra01('V')" id="btnV">V</button>
-            <button value="B" onclick="letra01('B')" id="btnB">B</button>
-            <button value="N" onclick="letra01('N')" id="btnN">N</button>
-            <button value="M" onclick="letra01('M')" id="btnM">M</button>
+            <button value="Z" onclick="verificarLetra('Z')" id="btnZ">Z</button>
+            <button value="X" onclick="verificarLetra('X')" id="btnX">X</button>
+            <button value="C" onclick="verificarLetra('C')" id="btnC">C</button>
+            <button value="V" onclick="verificarLetra('V')" id="btnV">V</button>
+            <button value="B" onclick="verificarLetra('B')" id="btnB">B</button>
+            <button value="N" onclick="verificarLetra('N')" id="btnN">N</button>
+            <button value="M" onclick="verificarLetra('M')" id="btnM">M</button>
         </p>
     </footer>
 
